tests/success/bool_and_xor_or_match_type.bz
function test()
{
	let _ = true && switch (0) { else => true };
	let _ = true ^^ switch (0) { else => true };
	let _ = true || switch (0) { else => true };
}
