tests/error/comptime/check_destruct_value1.bz
function test()
{
	(consteval {
		let i = 0;
		__builtin_destruct_value(i);
	});
}
